2014-08-17 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/setjmp.c:
	  Disabled for the stm8 port.

2014-08-16 Ben Shi <powerstudio1st AT 163.com>
	* all.vcxproj:
	* support/scripts/sdcc.nsi:
	  Create a new sdldstm8 on Windows.
	* sdas/linksrc/Makefile.in:
	* Makefile.in:
	  Create a spereated sdldstm8 on Unix like.
	* src/stm8/main.c:
	* sdas/linksrc/sdld.c:
	* sdas/linksrc/sdld.h:
	  Let the stm8 port use sdldstm8 instead of sdld.

2014-08-12 Ben Shi <powerstudio1st AT 163.com>
	* sdcc/support/regression/tests/bug-2205.c:
	* sdcc/support/regression/tests/bug-971834.c:
	* sdcc/support/regression/tests/key.c:
	  Make Small changes to fit LLVM/CLANG for host test.

2014-08-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (pushSide, genPcall): fixed bug with pointer
	  function call overwriting register parameter with function
	  address. Optimized constant function pointer case.

2014-08-06 Ben Shi <powerstudio1st AT 163.com>
	* sdas/linksrc/lkaomf51.c:
	  Add array bound check to avoid crash.

2014-07-30 Ben Shi <powerstudio1st AT 163.com>
	* sim/ucsim/st7.src/inst.cc:
	  Eliminate warnings.
	* support/regression/tests/gcc-torture-execute-930628-1.c:
	  Enable this case for the stm8 port.

2014-07-29 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-20030714-1.c:
	  Enable this case for the stm8 port.
	* src/stm8/gen.c:
	  Fix bug #2285: an error in genCast().

2014-07-22 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/optimize_pic16devices.pl,
	  device/include/pic16/pic16devices.txt:
	  Stronger optimization.

2014-07-21 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-stdarg-4.c:
	* support/regression/tests/gcc-torture-execute-stdarg-5.c:
	  Split the original gcc-torture-execute-stdarg-4.c to inline / non-inline.

2014-07-20 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-stdarg-4.c: